Adds countdown timer and carousel for sales promotions
Implements a countdown timer to display time remaining for sales events in the UI.

Adds a carousel with promotional cards showcasing discounted items and featured collections. Updates HTML structure to improve product highlighting and user engagement.

Includes new styling and scripts for enhanced functionality.

--- a/FashinstoreClone/testing.html
+++ b/FashinstoreClone/testing.html
@@ -30,22 +30,141 @@
 </head>
 
 <body>
- <div class="col-lg-4">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-danger" type="submit" style="color: #8c0d4f;">
-                            <i class='bx bx-search bx-md'></i>
-                        </button>
-                    </form>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+
+            <!-- CARD1 -->
+            <div class="carousel-item active">
+                <div class="shoe-card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-8 col-lg-6 col-md-12 ">
+                            <div class="hero-card-body ">
+                                <!-- pill -->
+                                <h5 class="hero-card-pill">limited Time </h5>
+                                <p class="hero-card-title">Season Sale Up to 50% Off
+                                </p>
+                                <p class="hero-card-text"><small class="text-muted">Curabitur aliquet quam id
+                                        dui
+                                        posuere blandit. Nulla quis lorem ut
+                                        libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt
+                                        nibh pulvinar.</small>
+                                </p>
+                                <!-- sales Button -->
+                                <button>Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
+
+                                <!-- CountDown Timer  -->
+                                <div id="sale-count"></div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-6 col-md-12">
+                            <!-- off sticker -->
+                            <div class="percent">50% off</div>
+                            <img src="shoe.webp" class="img-fluid rounded-start" alt="shoe">
+                            <div class="b-p">
+                                <p>Best Seller</p>
+                                <del class="text-muted">$129.99</del><span>$64.99</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- CARD2 -->
+            <div class="carousel-item">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-8 col-lg-6 col-md-12 ">
+                            <div class="bag-card-body ">
+                                <!-- pill -->
+                                <h5 class="bag-card-pill"> Featured Collection</h5>
+                                <p class="bag-card-title">Premium Quality Products
+                                </p>
+                                <p class="bag-card-text"><small class="text-muted">CVestibulum ac diam sit amet quam
+                                        vehicula elementum sed sit
+                                        amet dui. Donec rutrum congue leo eget malesuada. Cras ultricies
+                                        ligula sed magna dictum porta.</small>
+                                </p>
+                                <!-- sales Button -->
+                                <button>Explore Collection <i class='bx bx-right-arrow-alt'></i></button>
+
+                                <div class="imp-list">
+                                    <ul class="met-type">
+                                        <li><i class='bx bxs-check-circle' style='color:#b10606'></i>Premium Materials
+                                        </li>
+                                        <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Handcrafted
+                                            Quality</li>
+                                        <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Lifetime Warranty
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-6 col-md-12">
+                            <!-- pill -->
+                            <div class="percent">Featured</div>
+                            <img src="bag.webp" class="img-fluid rounded-start" alt="shoe">
+                            <div class="star">
+                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
+                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
+                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
+                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
+                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
+                                <p>"Exceptional quality and design"
+                                    </p>
+                                    <span>Satisfied Customer</span>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
 
+            </div>
+            <!-- CARD3 -->
+            <div class="carousel-item">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-8 col-lg-6 col-md-12 ">
+                            <div class="back-card-body ">
+                                <!-- pill -->
+                                <h5 class="back-card-pill">limited Time </h5>
+                                <p class="back-card-title">Season Sale Up to 50% Off
+                                </p>
+                                <p class="back-card-text"><small class="text-muted">Curabitur aliquet quam id
+                                        dui
+                                        posuere blandit. Nulla quis lorem ut
+                                        libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt
+                                        nibh pulvinar.</small>
+                                </p>
+                                <!-- sales Button -->
+                                <button>Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
 
 
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-6 col-md-12">
+                            <!-- off sticker -->
+                            <div class="percent">50% off</div>
+                            <img src="backpack.webp" class="img-fluid rounded-start" alt="shoe">
+                            <div class="b-p">
+                                <p>Best Seller</p>
+                                <span>$64.99</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <script src="fstore.js"></script>
+        <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
