Adds hero carousel and countdown timer functionality
Introduces a hero carousel section with multiple cards showcasing product offers, including images, badges, and dynamic countdown timers. Enhances styling with improved button designs, text formatting, and layout adjustments. Updates JavaScript logic for countdown timer display and expiration handling.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -354,31 +354,155 @@
     <!-- herosection -->
     <section class="mainhero-container">
         <div class="container-fluid">
+            <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel"> -->
+            <div class="carousel-inner">
 
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <!-- shoe -->
-                        <img src="shoe.webp" class="d-block w-25" alt="shoe">
+                <!-- CARD1 -->
+                <div class="carousel-item active">
+                    <div class="shoe-card p-5" style="width: 90%; background-color: azure; height:42rem;">
+                        <div class="row g-0">
 
-                    </div>
-                    <div class="carousel-item">
-                        <img src="bag.webp" class="d-block w-25" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="backpack.webp" class="d-block w-25" alt="...">
+                            <!-- Left column: text + timer -->
+                            <div class="col-12 col-md-6 col-lg-6">
+                                <div class="hero-card-body">
+                                    <!-- pill -->
+                                    <div class="hero-card-pill">
+                                        <p>limited Time</p>
+                                    </div>
+
+                                    <p class="hero-card-title">
+                                        Season <span style="color: #8c0d4f;">Sale</span> Up to 50% Off
+                                    </p>
+
+                                    <p class="hero-card-text">
+                                        <small class="text-muted">Curabitur aliquet quam id dui posuere blandit. Nulla
+                                            quis lorem ut libero malesuada feugiat. Mauris blandit aliquet elit, eget
+                                            tincidunt nibh pulvinar.</small>
+                                    </p>
+
+                                    <!-- sales Button -->
+                                    <button class="hero-btn">Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
+
+                                    <!-- CountDown Timer -->
+                                    <p class="fw-bold">Offer Ends In:</p>
+                                    <div id="sale-count" class="d-flex gap-2 flex-wrap">
+                                        <div class="d"></div>
+                                        <div class="h"></div>
+                                        <div class="m"></div>
+                                        <div class="s"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Right column: image + badge -->
+                            <div class="col-12 col-md-6 col-lg-6 px-5">
+                                <!-- off sticker -->
+                                <div class="percent">50% <span>off</span></div>
+
+                                <div class="carouselImg">
+                                    <img src="shoe.webp" class="img-fluid rounded-start" alt="shoe">
+                                </div>
+
+                                <div class="b-p">
+                                    <p>Best Seller</p>
+                                    <del class="text-muted">$129.99</del>
+                                    <span class="px-3">$64.99</span>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+
+
+
+                <!-- CARD2 -->
+                <div class="carousel-item">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-8 col-lg-6 col-md-12 ">
+                                <div class="bag-card-body ">
+                                    <!-- pill -->
+                                    <h5 class="bag-card-pill"> Featured Collection</h5>
+                                    <p class="bag-card-title">Premium Quality Products
+                                    </p>
+                                    <p class="bag-card-text"><small class="text-muted">CVestibulum ac diam sit amet quam
+                                            vehicula elementum sed sit
+                                            amet dui. Donec rutrum congue leo eget malesuada. Cras ultricies
+                                            ligula sed magna dictum porta.</small>
+                                    </p>
+                                    <!-- sales Button -->
+                                    <button>Explore Collection <i class='bx bx-right-arrow-alt'></i></button>
+
+                                    <div class="imp-list">
+                                        <ul class="met-type">
+                                            <li><i class='bx bxs-check-circle' style='color:#b10606'></i>Premium
+                                                Materials
+                                            </li>
+                                            <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Handcrafted
+                                                Quality</li>
+                                            <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Lifetime
+                                                Warranty
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-lg-6 col-md-12">
+                                <!-- pill -->
+                                <div class="percent">Featured</div>
+                                <img src="bag.webp" class="img-fluid rounded-start" alt="shoe">
+                                <div class="star">
+                                    <i class='bx bxs-star' style='color:#dcc50d'></i>
+                                    <i class='bx bxs-star' style='color:#dcc50d'></i>
+                                    <i class='bx bxs-star' style='color:#dcc50d'></i>
+                                    <i class='bx bxs-star' style='color:#dcc50d'></i>
+                                    <i class='bx bxs-star' style='color:#dcc50d'></i>
+                                    <p>"Exceptional quality and design"
+                                    </p>
+                                    <span>Satisfied Customer</span>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+                <!-- CARD3 -->
+                <div class="carousel-item">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-8 col-lg-6 col-md-12 ">
+                                <div class="back-card-body ">
+                                    <!-- pill -->
+                                    <h5 class="back-card-pill">limited Time </h5>
+                                    <p class="back-card-title">Season Sale Up to 50% Off
+                                    </p>
+                                    <p class="back-card-text"><small class="text-muted">Curabitur aliquet quam id
+                                            dui
+                                            posuere blandit. Nulla quis lorem ut
+                                            libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt
+                                            nibh pulvinar.</small>
+                                    </p>
+                                    <!-- sales Button -->
+                                    <button>Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
+
+
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-lg-6 col-md-12">
+                                <!-- off sticker -->
+                                <div class="percent">50% off</div>
+                                <img src="backpack.webp" class="img-fluid rounded-start" alt="shoe">
+                                <div class="b-p">
+                                    <p>Best Seller</p>
+                                    <span>$64.99</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
