--- a/FashinstoreClone/testing.html
+++ b/FashinstoreClone/testing.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="Fstorestyle.css"> -->
+    <link rel="stylesheet" href="Fstorestyle.css">
 
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -22,149 +22,173 @@
         } */
 
         a {
-            text-decoration: none;
-            color: inherit;
+            /* text-decoration: none;
+            color: inherit; */
             /* Prevents default blue color */
         }
     </style>
 </head>
 
 <body>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
+    <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel"> -->
+    <div class="carousel-inner">
 
-            <!-- CARD1 -->
-            <div class="carousel-item active">
-                <div class="shoe-card mb-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-8 col-lg-6 col-md-12 ">
-                            <div class="hero-card-body ">
-                                <!-- pill -->
-                                <h5 class="hero-card-pill">limited Time </h5>
-                                <p class="hero-card-title">Season Sale Up to 50% Off
-                                </p>
-                                <p class="hero-card-text"><small class="text-muted">Curabitur aliquet quam id
-                                        dui
-                                        posuere blandit. Nulla quis lorem ut
-                                        libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt
-                                        nibh pulvinar.</small>
-                                </p>
-                                <!-- sales Button -->
-                                <button>Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
+        <!-- CARD1 -->
+        <div class="carousel-item active">
+  <div class="shoe-card p-5" style="width: 90%; background-color: azure; height:42rem;">
+    <div class="row g-0">
+      
+      <!-- Left column: text + timer -->
+      <div class="col-12 col-md-6 col-lg-6">
+        <div class="hero-card-body">
+          <!-- pill -->
+          <div class="hero-card-pill">
+            <p>limited Time</p>
+          </div>
 
-                                <!-- CountDown Timer  -->
-                                <div id="sale-count"></div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-lg-6 col-md-12">
-                            <!-- off sticker -->
-                            <div class="percent">50% off</div>
-                            <img src="shoe.webp" class="img-fluid rounded-start" alt="shoe">
-                            <div class="b-p">
-                                <p>Best Seller</p>
-                                <del class="text-muted">$129.99</del><span>$64.99</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          <p class="hero-card-title">
+            Season <span style="color: #8c0d4f;">Sale</span> Up to 50% Off
+          </p>
+
+          <p class="hero-card-text">
+            <small class="text-muted">Curabitur aliquet quam id dui posuere blandit. Nulla quis lorem ut libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar.</small>
+          </p>
+
+          <!-- sales Button -->
+          <button class="hero-btn">Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
+
+          <!-- CountDown Timer -->
+          <p class="fw-bold">Offer Ends In:</p>
+          <div id="sale-count" class="d-flex gap-2 flex-wrap">
+            <div class="d"></div>
+            <div class="h"></div>
+            <div class="m"></div>
+            <div class="s"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Right column: image + badge -->
+      <div class="col-12 col-md-6 col-lg-6 px-5">
+        <!-- off sticker -->
+        <div class="percent">50% <span>off</span></div>
+
+        <div class="carouselImg">
+          <img src="shoe.webp" class="img-fluid rounded-start" alt="shoe">
+        </div>
+
+        <div class="b-p">
+          <p>Best Seller</p>
+          <del class="text-muted">$129.99</del>
+          <span class="px-3">$64.99</span>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 
-            <!-- CARD2 -->
-            <div class="carousel-item">
-                <div class="card mb-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-8 col-lg-6 col-md-12 ">
-                            <div class="bag-card-body ">
-                                <!-- pill -->
-                                <h5 class="bag-card-pill"> Featured Collection</h5>
-                                <p class="bag-card-title">Premium Quality Products
-                                </p>
-                                <p class="bag-card-text"><small class="text-muted">CVestibulum ac diam sit amet quam
-                                        vehicula elementum sed sit
-                                        amet dui. Donec rutrum congue leo eget malesuada. Cras ultricies
-                                        ligula sed magna dictum porta.</small>
-                                </p>
-                                <!-- sales Button -->
-                                <button>Explore Collection <i class='bx bx-right-arrow-alt'></i></button>
 
-                                <div class="imp-list">
-                                    <ul class="met-type">
-                                        <li><i class='bx bxs-check-circle' style='color:#b10606'></i>Premium Materials
-                                        </li>
-                                        <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Handcrafted
-                                            Quality</li>
-                                        <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Lifetime Warranty
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-lg-6 col-md-12">
+
+        <!-- CARD2 -->
+        <div class="carousel-item">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-8 col-lg-6 col-md-12 ">
+                        <div class="bag-card-body ">
                             <!-- pill -->
-                            <div class="percent">Featured</div>
-                            <img src="bag.webp" class="img-fluid rounded-start" alt="shoe">
-                            <div class="star">
-                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
-                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
-                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
-                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
-                                <i class='bx bxs-star' style='color:#dcc50d'  ></i>
-                                <p>"Exceptional quality and design"
-                                    </p>
-                                    <span>Satisfied Customer</span>
+                            <h5 class="bag-card-pill"> Featured Collection</h5>
+                            <p class="bag-card-title">Premium Quality Products
+                            </p>
+                            <p class="bag-card-text"><small class="text-muted">CVestibulum ac diam sit amet quam
+                                    vehicula elementum sed sit
+                                    amet dui. Donec rutrum congue leo eget malesuada. Cras ultricies
+                                    ligula sed magna dictum porta.</small>
+                            </p>
+                            <!-- sales Button -->
+                            <button>Explore Collection <i class='bx bx-right-arrow-alt'></i></button>
 
+                            <div class="imp-list">
+                                <ul class="met-type">
+                                    <li><i class='bx bxs-check-circle' style='color:#b10606'></i>Premium Materials
+                                    </li>
+                                    <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Handcrafted
+                                        Quality</li>
+                                    <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Lifetime Warranty
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                </div>
+                    <div class="col-md-4 col-lg-6 col-md-12">
+                        <!-- pill -->
+                        <div class="percent">Featured</div>
+                        <img src="bag.webp" class="img-fluid rounded-start" alt="shoe">
+                        <div class="star">
+                            <i class='bx bxs-star' style='color:#dcc50d'></i>
+                            <i class='bx bxs-star' style='color:#dcc50d'></i>
+                            <i class='bx bxs-star' style='color:#dcc50d'></i>
+                            <i class='bx bxs-star' style='color:#dcc50d'></i>
+                            <i class='bx bxs-star' style='color:#dcc50d'></i>
+                            <p>"Exceptional quality and design"
+                            </p>
+                            <span>Satisfied Customer</span>
 
-
-            </div>
-            <!-- CARD3 -->
-            <div class="carousel-item">
-                <div class="card mb-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-8 col-lg-6 col-md-12 ">
-                            <div class="back-card-body ">
-                                <!-- pill -->
-                                <h5 class="back-card-pill">limited Time </h5>
-                                <p class="back-card-title">Season Sale Up to 50% Off
-                                </p>
-                                <p class="back-card-text"><small class="text-muted">Curabitur aliquet quam id
-                                        dui
-                                        posuere blandit. Nulla quis lorem ut
-                                        libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt
-                                        nibh pulvinar.</small>
-                                </p>
-                                <!-- sales Button -->
-                                <button>Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
-
-
-                            </div>
                         </div>
-                        <div class="col-md-4 col-lg-6 col-md-12">
-                            <!-- off sticker -->
-                            <div class="percent">50% off</div>
-                            <img src="backpack.webp" class="img-fluid rounded-start" alt="shoe">
-                            <div class="b-p">
-                                <p>Best Seller</p>
-                                <span>$64.99</span>
-                            </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+        <!-- CARD3 -->
+        <div class="carousel-item">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-8 col-lg-6 col-md-12 ">
+                        <div class="back-card-body ">
+                            <!-- pill -->
+                            <h5 class="back-card-pill">limited Time </h5>
+                            <p class="back-card-title">Season Sale Up to 50% Off
+                            </p>
+                            <p class="back-card-text"><small class="text-muted">Curabitur aliquet quam id
+                                    dui
+                                    posuere blandit. Nulla quis lorem ut
+                                    libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt
+                                    nibh pulvinar.</small>
+                            </p>
+                            <!-- sales Button -->
+                            <button>Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
+
+
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-lg-6 col-md-12">
+                        <!-- off sticker -->
+                        <div class="percent">50% off</div>
+                        <img src="backpack.webp" class="img-fluid rounded-start" alt="shoe">
+                        <div class="b-p">
+                            <p>Best Seller</p>
+                            <span>$64.99</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
 
 
 
-        <script src="fstore.js"></script>
-        <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+
+
+    <script src="fstore.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
