--- a/FashinstoreClone/testing.html
+++ b/FashinstoreClone/testing.html
@@ -33,123 +33,16 @@
     <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel"> -->
     <div class="carousel-inner">
 
-        <!-- CARD1 -->
-        <div class="carousel-item active">
-  <div class="shoe-card p-5" style="width: 90%; background-color: azure; height:42rem;">
-    <div class="row g-0">
-      
-      <!-- Left column: text + timer -->
-      <div class="col-12 col-md-6 col-lg-6">
-        <div class="hero-card-body">
-          <!-- pill -->
-          <div class="hero-card-pill">
-            <p>limited Time</p>
-          </div>
 
-          <p class="hero-card-title">
-            Season <span style="color: #8c0d4f;">Sale</span> Up to 50% Off
-          </p>
-
-          <p class="hero-card-text">
-            <small class="text-muted">Curabitur aliquet quam id dui posuere blandit. Nulla quis lorem ut libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar.</small>
-          </p>
-
-          <!-- sales Button -->
-          <button class="hero-btn">Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
-
-          <!-- CountDown Timer -->
-          <p class="fw-bold">Offer Ends In:</p>
-          <div id="sale-count" class="d-flex gap-2 flex-wrap">
-            <div class="d"></div>
-            <div class="h"></div>
-            <div class="m"></div>
-            <div class="s"></div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Right column: image + badge -->
-      <div class="col-12 col-md-6 col-lg-6 px-5">
-        <!-- off sticker -->
-        <div class="percent">50% <span>off</span></div>
-
-        <div class="carouselImg">
-          <img src="shoe.webp" class="img-fluid rounded-start" alt="shoe">
-        </div>
-
-        <div class="b-p">
-          <p>Best Seller</p>
-          <del class="text-muted">$129.99</del>
-          <span class="px-3">$64.99</span>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-
-
-
-        <!-- CARD2 -->
-        <div class="carousel-item">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-8 col-lg-6 col-md-12 ">
-                        <div class="bag-card-body ">
-                            <!-- pill -->
-                            <h5 class="bag-card-pill"> Featured Collection</h5>
-                            <p class="bag-card-title">Premium Quality Products
-                            </p>
-                            <p class="bag-card-text"><small class="text-muted">CVestibulum ac diam sit amet quam
-                                    vehicula elementum sed sit
-                                    amet dui. Donec rutrum congue leo eget malesuada. Cras ultricies
-                                    ligula sed magna dictum porta.</small>
-                            </p>
-                            <!-- sales Button -->
-                            <button>Explore Collection <i class='bx bx-right-arrow-alt'></i></button>
-
-                            <div class="imp-list">
-                                <ul class="met-type">
-                                    <li><i class='bx bxs-check-circle' style='color:#b10606'></i>Premium Materials
-                                    </li>
-                                    <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Handcrafted
-                                        Quality</li>
-                                    <li> <i class='bx bxs-check-circle' style='color:#b10606'></i> Lifetime Warranty
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-lg-6 col-md-12">
-                        <!-- pill -->
-                        <div class="percent">Featured</div>
-                        <img src="bag.webp" class="img-fluid rounded-start" alt="shoe">
-                        <div class="star">
-                            <i class='bx bxs-star' style='color:#dcc50d'></i>
-                            <i class='bx bxs-star' style='color:#dcc50d'></i>
-                            <i class='bx bxs-star' style='color:#dcc50d'></i>
-                            <i class='bx bxs-star' style='color:#dcc50d'></i>
-                            <i class='bx bxs-star' style='color:#dcc50d'></i>
-                            <p>"Exceptional quality and design"
-                            </p>
-                            <span>Satisfied Customer</span>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
         <!-- CARD3 -->
-        <div class="carousel-item">
-            <div class="card mb-3" style="max-width: 540px;">
+
+        <!-- <div class="carousel-item active">
+            <div class="back-card mb-3" style="width: 90%; background-color: rgb(251, 241, 241); height:42rem; padding: 3rem;">
                 <div class="row g-0">
-                    <div class="col-md-8 col-lg-6 col-md-12 ">
-                        <div class="back-card-body ">
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <div class="back-card-body"> -->
                             <!-- pill -->
-                            <h5 class="back-card-pill">limited Time </h5>
+                            <!-- <h5 class="back-card-pill">limited Time </h5>
                             <p class="back-card-title">Season Sale Up to 50% Off
                             </p>
                             <p class="back-card-text"><small class="text-muted">Curabitur aliquet quam id
@@ -157,26 +50,76 @@
                                     posuere blandit. Nulla quis lorem ut
                                     libero malesuada feugiat. Mauris blandit aliquet elit, eget tincidunt
                                     nibh pulvinar.</small>
-                            </p>
+                            </p> -->
                             <!-- sales Button -->
-                            <button>Shop Sale <i class='bx bx-right-arrow-alt'></i></button>
+                            <!-- <button class="backbtn">Shop New Arrivals<i class='bx bx-right-arrow-alt'></i></button>
 
 
                         </div>
                     </div>
-                    <div class="col-md-4 col-lg-6 col-md-12">
-                        <!-- off sticker -->
-                        <div class="percent">50% off</div>
-                        <img src="backpack.webp" class="img-fluid rounded-start" alt="shoe">
-                        <div class="b-p">
-                            <p>Best Seller</p>
-                            <span>$64.99</span>
+                    <div class="col-md-4 col-lg-6 col-md-12 p-4">
+                        <div class="container overflow-hidden">
+                            <div class="row gy-3 gx-3"> -->
+                                <!-- CARD 1 -->
+                                <!-- <div class="backS-card col-6">
+                                    <div class="border text-center">
+                                        <div class="bimg">
+                                            <img src="purse.webp" alt="purse" width="50%" height="50%">
+                                        </div>
+                                        <hr>
+                                        <div class="backS-card-text">
+                                            <p class="a">Modern Style</p>
+                                            <p class="b">$79.99</p>
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <!-- CARD 2 -->
+                                <!-- <div class="backS-card col-6">
+                                    <div class="border text-center">
+                                        <div class="bimg">
+                                            <img src="chair.webp" alt="chair" width="50%" height="50%">
+                                        </div>
+                                        <hr>
+                                        <div class="backS-card-text">
+                                            <p class="a">Casual Collection</p>
+                                            <p class="b">$64.99</p>
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <!-- CARD 3 -->
+                                <!-- <div class="backS-card col-6">
+                                    <div class="border text-center">
+                                        <div class="bimg">
+                                            <img src="backpack.webp" alt="backpack" width="50%" height="50%">
+                                        </div>
+                                        <hr>
+                                        <div class="backS-card-text">
+                                            <p class="a">Premium Design</p>
+                                            <p class="b">$89.99</p>
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <!-- CARD 4 -->
+                                <!-- <div class="backS-card col-6">
+                                    <div class="border text-center">
+                                        <div class="bimg">
+                                            <img src="jecket.webp" alt="jacket" width="50%" height="50%">
+                                        </div>
+                                        <hr>
+                                        <div class="backS-card-text">
+                                            <p class="a">Elegant Series</p>
+                                            <p class="b">$74.99</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+
+    </div> -->
 
 
 
