Improves carousel styling and hover interactions
Updates carousel item dimensions for better visual balance.
Refines hover effects for buttons to enhance user experience.
Adjusts positioning and shadow styles for consistency.
Renames class selectors for clarity and maintainability.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -368,7 +368,7 @@
                     <!-- CARD1 -->
                     <div class="carousel-item active">
                         <div class="shoe-card p-5"
-                            style="width: 90%; height:42rem;">
+                            style="width: 90%; height:46rem;">
                             <div class="row g-0">
 
                                 <div class="col-12 col-md-6 col-lg-6">
@@ -394,7 +394,7 @@
                                         <button class="hero-btn">Shop Sale <i
                                                 class='bx bx-right-arrow-alt'></i></button>
 
-                                        <!-- CountDown Timer -->
+                                        <!-- COUNTDOWN TIMER -->
                                         <p class="fw-bold">Offer Ends In:</p>
                                         <div id="sale-count" class="d-flex gap-2 flex-wrap">
                                             <div class="d"></div>
@@ -430,7 +430,7 @@
                     <!-- CARD2 -->
                     <div class="carousel-item">
                         <div class="bag-card p-5"
-                            style="width: 90%; height:42rem;">
+                            style="width: 90%; height:46rem;">
                             <div class="row g-0">
                                 <div class="col-12 col-md-6 col-lg-6">
                                     <div class="bag-card-body ">
@@ -471,7 +471,7 @@
                                         <img src="bag.webp" class="img-fluid rounded-start" alt="bag">
                                     </div>
 
-                                    <div class="star pt-2">
+                                    <div class="Bcstar pt-2">
                                         <i class='bx bxs-star' style='color:#dcc50d'></i>
                                         <i class='bx bxs-star' style='color:#dcc50d'></i>
                                         <i class='bx bxs-star' style='color:#dcc50d'></i>
@@ -490,8 +490,8 @@
                     </div>
                     <!-- CARD3 -->
                     <div class="carousel-item">
-                        <div class="back-card mb-3"
-                            style="width: 90%;padding: 3rem;">
+                        <div class="back-card p-5"
+                             style="width: 90%; height:46rem;">
                             <div class="row g-0">
                                 <div class="col-12 col-md-6 col-lg-6">
                                     <div class="back-card-body">
