Adjusts navbar styles and centers offer text
Comments out oversized font size in navbar to improve readability and maintain layout consistency. Removes unnecessary positioning in sale section for cleaner styling. Adds text-center class to "Offer Ends In" text for improved alignment.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -395,7 +395,7 @@
                                                 class='bx bx-right-arrow-alt'></i></button>
 
                                         <!-- COUNTDOWN TIMER -->
-                                        <p class="fw-bold">Offer Ends In:</p>
+                                        <p class="fw-bold text-center">Offer Ends In:</p>
                                         <div id="sale-count" class="d-flex gap-2 flex-wrap">
                                             <div class="d"></div>
                                             <div class="h"></div>
