Adds megamenu styling and integrates navbar enhancements
Introduces a responsive megamenu with custom alignment for improved navigation. Enhances navbar functionality with dropdowns and language/currency options. Updates footer and adds new styling for better user experience. Includes AOS library for animations.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -28,6 +28,10 @@
         /* 20/06..badges and pills */
         /* 21/06...promocard hover */
         /* 23/06...category cards */
+        /* 24/06..img hovers/js */
+        /* 25/06...fixed all buttons/hovers serchbar */
+        /* 26/27/06 ... contact log in, register pages linked /js css  */
+        /* 27/28/06...completed carousel started megamenu*/
     </style>
 </head>
 
@@ -310,13 +314,9 @@
                         </div>
                     </div>
 
-
-
-
-
-                    <!-- megaMenu1 -->
+                    <!-- MEGAMENU 1 -->
                     <a class="nav-link" href="#">Megamenu1</a>
-                    <!-- megaMenu2 -->
+                    <!-- MEGAMENU2 -->
                     <a class="nav-link" href="#">Megamenu2</a>
 
 
@@ -352,6 +352,7 @@
     </div>
 
     <!-- herosection -->
+    <!-- DONE  -->
     <section class="mainhero-container">
         <div class="container-fluid">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
