--- a/FashinstoreClone/testing.html
+++ b/FashinstoreClone/testing.html
@@ -322,24 +322,26 @@
                             MegaMenu 1
                         </a>
 
-                        <div class="dropdown-menu mega-menu p-4 custom-align-left"">
+                        <div class="dropdown-menu mega-menu p-3">
                             <div class="card-header">
                                 <ul class="nav nav-pills card-header-pills">
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="#">Active</a>
+                                        <a class="nav-link active" href="#">Featured</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Link</a>
+                                        <a class="nav-link" href="#">New Arrivals</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link disabled" href="#" tabindex="-1"
-                                            aria-disabled="true">Disabled</a>
+                                        <a class="nav-link" href="#">Sales</a>
+                                    </li>
+                                     <li class="nav-item">
+                                        <a class="nav-link" href="#">Categories</a>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="card-body">
-                                <h5 class="card-title">Special title treatment</h5>
-                                <p class="card-text">With supporting text below as a natural lead-in to additional
+                            <div class="fecard-body">
+                                <h5 class="fecard-title">Special title treatment</h5>
+                                <p class="fecard-text">With supporting text below as a natural lead-in to additional
                                     content.</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
