Refines styling and structure for improved consistency
- Corrects class name formatting errors for better readability.
- Enhances MegaMenu design and functionality, including tabs for featured, arrivals, sales, and categories.
- Introduces new styling for cards and images, improving visual alignment and hover effects.
- Updates navbar spacing and alignment for consistent layout.

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -269,7 +269,7 @@
 
     <!-- home about nav bar -->
     <!-- align(done) and text edit -->
-    <nav class="navbar navbar-expand-lg  ">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid w-100">
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -277,10 +277,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
-                <div class="navbar-nav  " id="home-navbar">
-                    <a class="nav-link active " aria-current="page" href="#">Home</a>
-                    <a class="nav-link  " href="#">About</a>
-                    <a class="nav-link " href="#">category</a>
+                <div class="navbar-nav" id="home-navbar">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">category</a>
                     <a class="nav-link" href="#">product Details</a>
                     <a class="nav-link" href="#">Cart</a>
                     <a class="nav-link" href="#">Checkout</a>
@@ -660,7 +660,7 @@
     <!-- Done -->
     <section id="category-cards" class="category-cards section ">
 
-        <div class="container aos-init aos-animate " data-aos="fade-up" data-aos-delay="100">
+        <div class="container">
 
             <div class="category-tabs pb-5 ">
 
