Enhances megamenu layout with new category links and styling adjustments

--- a/FashinstoreClone/index.html
+++ b/FashinstoreClone/index.html
@@ -698,17 +698,14 @@
                                 <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
                                     <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab"
                                         data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home"
-                                        aria-selected="true">Featured</button>
-                                    <button class="nav-link" id="nav-Arrivals-tab" data-bs-toggle="tab"
-                                        data-bs-target="#nav-Arrivals" type="button" role="tab"
-                                        aria-controls="nav-Arrivals" aria-selected="false">New
-                                        Arrivals</button>
-                                    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab"
-                                        data-bs-target="#nav-contact" type="button" role="tab"
-                                        aria-controls="nav-contact" aria-selected="false">Sales</button>
-                                    <button class="nav-link" id="nav-Category-tab" data-bs-toggle="tab"
-                                        data-bs-target="#nav-Category" type="button" role="tab"
-                                        aria-controls="nav-Category" aria-selected="false">Category</button>
+                                        aria-selected="true">Women</button>
+                                    <button class="nav-link" id="nav-Men-tab" data-bs-toggle="tab"
+                                        data-bs-target="#nav-Men" type="button" role="tab" aria-controls="nav-Men"
+                                        aria-selected="false">Men</button>
+                                    <button class="nav-link" id="nav-Kids-tab" data-bs-toggle="tab"
+                                        data-bs-target="#nav-Kids" type="button" role="tab" aria-controls="nav-Kids"
+                                        aria-selected="false">Kids</button>
+
                                 </div>
 
                                 <div class="tab-content" id="nav-tabContent">
@@ -716,73 +713,49 @@
                                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
                                         aria-labelledby="nav-home-tab">
                                         <div class="megamenu-container overflow-hidden">
-                                            <div class="row">
-                                                <!-- CARD 1 -->
-                                                <div class="mega-img-card col-3">
-                                                    <div class="mega-border text-center">
-                                                        <div class="mega-img">
-                                                            <img src="purse.webp" alt="purse">
-                                                        </div>
-                                                        <hr>
-                                                        <div class="backS-card-text">
-                                                            <p class="a">Modern Style</p>
-                                                            <p class="b">$79.99</p>
-                                                        </div>
-                                                        <button class="btn btn-light text-white "
-                                                            style="background-color: #d9a4c4; font-weight: 600;">
-                                                            View Product
-                                                        </button>
+                                            <div class="row gap-2">
+                                                <div class="category-links col-6  gap-3">
+                                                    <div class="link-row">
+                                                        <a href="#">Shirts &amp; Tops</a>
+                                                        <a href="#">Boots</a>
+                                                        <a href="#">Handbags</a>
+                                                        <a href="#">Plus Size</a>
                                                     </div>
-                                                </div>
-                                                <!-- CARD 2 -->
-                                                <div class="mega-img-card col-3">
-                                                    <div class="mega-border text-center">
-                                                        <div class="mega-img">
-                                                            <img src="sunglases.webp" alt="chair">
-                                                        </div>
-                                                        <hr>
-                                                        <div class="backS-card-text">
-                                                            <p class="a">Casual Collection</p>
-                                                            <p class="b">$64.99</p>
-                                                        </div>
-                                                        <button class="btn btn-light text-white"
-                                                            style="background-color: #d9a4c4; font-weight: 600;">
-                                                            View Product
-                                                        </button>
+                                                    <div class="link-row">
+                                                        <a href="#">Coats &amp; Outerwear</a>
+                                                        <a href="#">Sandals</a>
+                                                        <a href="#">Eyewear</a>
+                                                        <a href="#">Petite</a>
                                                     </div>
-                                                </div>
-                                                <!-- CARD 3 -->
-                                                <div class="mega-img-card col-3">
-                                                    <div class="mega-border  text-center">
-                                                        <div class="mega-img">
-                                                            <img src="jecket.webp" alt="backpack">
-                                                        </div>
-                                                        <hr>
-                                                        <div class="backS-card-text">
-                                                            <p class="a">Premium Design</p>
-                                                            <p class="b">$89.99</p>
-                                                        </div>
-                                                        <button class="btn btn-light text-white"
-                                                            style="background-color: #d9a4c4; font-weight: 600;">
-                                                            View Product
-                                                        </button>
+                                                    <div class="link-row">
+                                                        <a href="#">Underwear</a>
+                                                        <a href="#">Heels</a>
+                                                        <a href="#">Hats</a>
+                                                        <a href="#">Wide Shoes</a>
                                                     </div>
-                                                </div>
-                                                <!-- CARD 4 -->
-                                                <div class="mega-img-card col-3">
-                                                    <div class="mega-border  text-center">
-                                                        <div class="mega-img">
-                                                            <img src="chair.webp" alt="jacket">
-                                                        </div>
-                                                        <hr>
-                                                        <div class="backS-card-text">
-                                                            <p class="a">Elegant Series</p>
-                                                            <p class="b">$74.99</p>
-                                                        </div>
-                                                        <button class="btn btn-light text-white"
-                                                            style="background-color: #d9a4c4; font-weight: 600;">
-                                                            View Product
-                                                        </button>
+                                                    <div class="link-row">
+                                                        <a href="#">Sweatshirts</a>
+                                                        <a href="#">Loafers</a>
+                                                        <a href="#">Watches</a>
+                                                        <a href="#">Narrow Shoes</a>
+                                                    </div>
+                                                    <div class="link-row">
+                                                        <a href="#">Dresses</a>
+                                                        <a href="#">Slippers</a>
+                                                        <a href="#">Jewelry</a>
+                                                        <a href="#"></a>
+                                                    </div>
+                                                    <div class="link-row">
+                                                        <a href="#">Swimwear</a>
+                                                        <a href="#">Oxfords</a>
+                                                        <a href="#">Belts</a>
+                                                        <a href="#"></a>
+                                                    </div>
+                                                    <div class="link-row">
+                                                        <a href="#">View all</a>
+                                                        <a href="#">View all</a>
+                                                        <a href="#">View all</a>
+                                                        <a href="#"></a>
                                                     </div>
                                                 </div>
                                             </div>
